<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_code_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login_back"
            android:textColor="@color/top_nav_modal_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login_code_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_code_mobile_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_and_register_margin_top"
                android:layout_marginLeft="@dimen/login_and_register_margin_left"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/login_and_register_margin_top"
                android:layout_weight="1.1"
                android:background="@drawable/username_and_password_et_bg"
                android:gravity="left|center_vertical"
                android:hint="@string/login_code"
                android:inputType="number"
                android:padding="@dimen/login_and_register_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/login_get_code_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_and_register_margin_top"
                android:layout_marginRight="@dimen/login_and_register_margin_left"
                android:layout_marginTop="@dimen/login_and_register_margin_top"
                android:layout_weight="1"
                android:background="@drawable/login_and_register_btn_bg"
                android:gravity="center"
                android:paddingBottom="@dimen/login_and_register_padding"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="@dimen/login_and_register_padding"
                android:singleLine="true"
                android:text="@string/login_and_register_login_code"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/login_code_password_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_new_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_code_btn"
            style="@style/LoginAndRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_and_register_login" />
    </LinearLayout>

</RelativeLayout>