<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/register_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/register_pre"
            android:textColor="@color/top_nav_modal_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.medialab.jelly.util.RoundedImageView
        xmlns:ml="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@id/register_actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/head_icon"
        ml:border_color="@color/white"
        ml:border_width="1dp"
        ml:oval="true" />

    <LinearLayout
        android:id="@+id/register_step2_opt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_avatar"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_username_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/register_btn"
            style="@style/LoginAndRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_str" />
    </LinearLayout>

    <TextView
        android:id="@+id/register_step2_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_step2_opt_view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/login_and_register_margin_left"
        android:layout_marginRight="@dimen/login_and_register_margin_left"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/register_step2_tips"
        android:textColor="@color/top_nav_modal_text_color"
        android:textSize="12sp" />

</RelativeLayout>