<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/link_chooser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/link_chooser_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/link_chooser_title"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/link_chooser_link"
            style="@style/LinkChooserEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/search_icon"
            android:drawablePadding="@dimen/link_chooser_search_padding"
            android:hint="@string/compose_question_link_chooser_hint" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/link_chooser_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/link_chooser_horizontal_margin"
                android:text="@string/link_chooser_use"
                android:textColor="@color/top_nav_modal_text_color"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/link_chooser_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/link_chooser_horizontal_margin"
                android:text="@string/link_chooser_search"
                android:textColor="@color/top_nav_modal_text_color"
                android:textSize="16sp" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/link_chooser_split_line_color" />

    <WebView
        android:id="@+id/link_chooser_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</LinearLayout>