<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_and_register_view_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_and_register_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/splash_icon" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_slogan"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_and_register_logo"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/login_and_register_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/login_and_register_logo"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/login_and_register_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_and_register_app_name"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@color/activity_bg"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/login_and_register_login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/login_and_register_with_corner_bg"
            android:layout_marginTop="@dimen/login_and_register_margin_top"
            android:layout_marginBottom="@dimen/login_and_register_margin_top"
            android:layout_marginLeft="@dimen/login_and_register_margin_left"
            android:layout_marginRight="@dimen/login_and_register_margin_left"
            android:padding="@dimen/login_and_register_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_and_register_login" />

        <TextView
            android:id="@+id/login_and_register_register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/login_and_register_with_corner_bg"
            android:layout_marginTop="@dimen/login_and_register_margin_top"
            android:layout_marginBottom="@dimen/login_and_register_margin_top"
            android:layout_marginLeft="@dimen/login_and_register_margin_left"
            android:layout_marginRight="@dimen/login_and_register_margin_left"
            android:padding="@dimen/login_and_register_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_and_register_register" />
    </LinearLayout>

</RelativeLayout>